--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <a-assets>
         <video
           id="vid"
-          src="/assets/asset.mp4"
+          src="../assets/asset.mp4"
           preload="auto"
           response-type="arraybuffer"
           loop
@@ -57,7 +57,7 @@
       <a-marker
         type="pattern"
         preset="custom"
-        url="/assets/marker.patt"
+        url="../assets/marker.patt"
         videohandler
         smooth="true"
         raycaster="objects: .clickable"
