--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <a-assets>
         <video
           id="vid"
-          src="https://cdn.glitch.me/b62e8d7d-7e32-413d-a308-0b9f35b75c24/asset.mp4?v=1713463144285"
+          src="https://cdn.glitch.me/b62e8d7d-7e32-413d-a308-0b9f35b75c24/asset.mp4"
           preload="auto"
           response-type="arraybuffer"
           loop
@@ -57,7 +57,7 @@
       <a-marker
         type="pattern"
         preset="custom"
-        url="https://cdn.glitch.global/b62e8d7d-7e32-413d-a308-0b9f35b75c24/marker.patt?v=1713463144619"
+        url="https://cdn.glitch.global/b62e8d7d-7e32-413d-a308-0b9f35b75c24/marker.patt"
         videohandler
         smooth="true"
         raycaster="objects: .clickable"
